Ticket #11607 (closed defect: fixed)

Opened 3 years ago

Last modified 3 years ago

Black toolbar in MSW mdi since r62971

Reported by: troelsk Owned by: vadz
Priority: normal Milestone: 2.9.1
Component: wxMSW Version: 2.9-svn
Keywords: regression Cc:
Blocked By: Patch: no
Blocking:

Description

Apply patch and run samples/docview: toolbar background is black

Attachments

toolbar-mdi.patch download (0.7 KB) - added by troelsk 3 years ago.
Trunk

Change History

Changed 3 years ago by troelsk

Trunk

Changed 3 years ago by vadz

I didn't test it yet but just a quick question: I assume this happens with MDI parent frame only?

Thanks!

Changed 3 years ago by troelsk

Yes this problem is manifest with the MDI parent frame only AFAIK. The toolbar sample etc works fine here.

Changed 3 years ago by vadz

  • keywords regression added
  • owner set to vadz
  • status changed from new to accepted
  • patch unset

Actually I don't even need any patches to see it, the problem is obvious in the unmodified mdi sample.

Changed 3 years ago by VZ

  • status changed from accepted to closed
  • resolution set to fixed

(In [63104]) Restore default WM_ERASEBKGND handling for wxMDIParentFrame.

We pretended that we erased the background ourselves but actually we did not.
Just let DefWindowProc() do whatever it does by default to fix the problem
with wrong toolbar background colour since r62971.

Also removed the unused and unneeded WM_SIZE handler as well.

Closes #11607.

Changed 3 years ago by troelsk

Works well again now.
Thanks!

Note: See TracTickets for help on using tickets.