Restore default WM_ERASEBKGND handling for wxMDIParentFrame.

We pretended that we erased the background ourselves but actually we did not.
Just let DefWindowProc() do whatever it does by default to fix the problem
with wrong toolbar background colour since r62971.

Also removed the unused and unneeded WM_SIZE handler as well.

Closes #11607.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@63104 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775